# ckg-agentforce

./: Dockerfile  README.md  mcpize.yaml  pyproject.toml  render.yaml  requirements.txt  server.json  smithery.yaml
docs/: CKG-PROVENANCE-SPEC.md  index.html
scripts/: validate_domain.py
src/ckg_agentforce/: __init__.py  graph.py  serve.py  server.py
src/ckg_agentforce/domains/: agentforce.csv
